--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,5 +5,5 @@ nodaemon=true
 port=*:9001
 
 [program:portal]
-command=python /root/portal/run.py --port=8080
+command=bash -c 'cd /root/portal && gunicorn -b 0.0.0.0:8000 run'
 
