pode usar serviços linkados pelo docker

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,5 +5,7 @@ nodaemon=true
 port=*:9001
 
 [program:portal]
-command=bash -c 'cd /root/portal && gunicorn -b 0.0.0.0:8000 run'
+command=gunicorn -b 0.0.0.0:8000 run
+directory=/root/portal
+redirect_stderr=True
 
